--- a/views/user/show.ejs
+++ b/views/user/show.ejs
@@ -96,6 +96,7 @@
 
 	      </div>
 
+	      <!-- ARTISTS LIKED -->
 	      <div class="tab-pane fade in" id="tab2">
 	        <h3>Artists Liked</h3>
 	      	<ul>
@@ -109,6 +110,7 @@
 	  			</ul>
 	      </div>
 
+	      <!-- EVENTS ATTENDING -->
 	      <div class="tab-pane fade in" id="tab3">
 	        <h3>Events Attending</h3>
 	      	<ul>
@@ -122,6 +124,7 @@
 					</ul>
 	      </div>
 
+	      <!-- AFFILIATED ARTISTS -->
 				<div class="tab-pane fade in" id="tab4">
 		      <h3>Affiliated Artists</h3>
 		      <ul>
