--- a/views/event/edit.ejs
+++ b/views/event/edit.ejs
@@ -52,9 +52,7 @@
 						<button id="edit-event" class="btn btn-dark mb-2 btn-block" type="submit">Submit Changes</button>
 					</form>
 				</div>
-
-
-
+			</div>
   	</main>
 
 		<footer class="container-fluid">
