--- a/views/event/show.ejs
+++ b/views/event/show.ejs
@@ -8,42 +8,41 @@
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	</head>
 
-		<body>
-			<header>
+	<body>
+		<header>
 
-				<nav id="navbar">
-						<div class="container-fluid">
+			<nav id="navbar">
+				<div class="container-fluid">
 
-								<ul class="nav navbar-left">
-									<li class="active"><a id="nav-responsive" href="/">Home</a></li>
-									<li><a id="nav-responsive" href="/user">Users</a></li>
-									<li><a id="nav-responsive" href="/artist">Artists</a></li>
-								</ul>
+					<ul class="nav navbar-left">
+						<li class="active"><a id="nav-responsive" href="/">Home</a></li>
+						<li><a id="nav-responsive" href="/user">Users</a></li>
+						<li><a id="nav-responsive" href="/artist">Artists</a></li>
+					</ul>
 
-								<ul class="nav navbar-right">
-									<li><a id="nav-responsive" href="/event">Back to Events</a></li>
-								</ul>
-							</div>
-						</nav>
+					<ul class="nav navbar-right">
+						<li><a id="nav-responsive" href="/event">Back to Events</a></li>
+					</ul>
 
-			</header>
+				</div>
+			</nav>
+		</header>
 
-
+		<main>
 			<div class="container-fluid">
 				<div class="col-lg-12 col-sm-12">
-
 					<div class="row justify-content-around">
-
 			    	<div class="card-hovercard">
-
 			        	<div class="card-background">
 
-			           		<img id="eventShowPic" class="card-bkimg backup_picture" alt="<%=event.name%> Image" src="<%=event.img%>">
+			           	<img id="eventShowPic" class="card-bkimg backup_picture" alt="<%=event.name%> Image" src="<%=event.img%>">
 								
 			        	</div>
 
-			        	<div class="card-info"> <span class="card-title"><h3> <%=event.name%></h3></span>
-			        			<a href="/event/<%=event.id%>/addUser/<%=user.id%>" class="btn btn-info btn-lg" id="event-button"><span class="glyphicon glyphicon-calendar"> </span> Attend <%=event.name%></a>
+			        	<div class="card-info"> 
+			        		<span class="card-title"><h3><%=event.name%></h3></span>
+
+			        		<a href="/event/<%=event.id%>/addUser/<%=user.id%>" class="btn btn-info btn-lg" id="event-button"><span class="glyphicon glyphicon-calendar"></span> Attend <%=event.name%></a>
 
 			      		</div>
 			    	</div>
@@ -51,93 +50,96 @@
 				</div>
 			</div>
 
+		  <div class="btn-pref btn-group btn-group-justified btn-group-lg" role="group" aria-label="...">
 
-			    <div class="btn-pref btn-group btn-group-justified btn-group-lg" role="group" aria-label="...">
-
-			        <div class="btn-group" role="group">
-			            <button type="button" id="stars" class="btn btn-dark" href="#tab1" data-toggle="tab"><span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-			                <div class="hidden-xs">About</div>
-			            </button>
-			        </div>
-
-
-							<div class="btn-group" role="group">
-			            <button type="button" id="eventArtists" class="btn btn-light" href="#tab2" data-toggle="tab"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>
-			                <div class="hidden-xs">Artists</div>
-			            </button>
-			        </div>
-
-							<div class="btn-group" role="group">
-			            <button type="button" id="going" class="btn btn-light" href="#tab3" data-toggle="tab"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-			                <div class="hidden-xs">Going</div>
-			            </button>
-			        </div>
-
-			    </div>
-
-			      <div class="well">
-					      <div class="tab-content">
-
-					        <div class="tab-pane fade in active" id="tab1">
-										<h3><%=event.name%> Info</h3>
-											<ul>
-												<%if (event.description) {%>
-													<li><span class="category">Description:</span> <%=event.description %></li>
-												<%}%>
-												<%if (event.venue) {%>
-													<li><span class="category">Venue:</span> <%= event.venue %></li>
-												<%}%>
-												<%if (event.date) {%>
-													<li><span class="category">Date:</span> <%= event.date %></li>
-												<%}%>
-											</ul>
-					        </div>
+        <div class="btn-group" role="group">
+          <button type="button" id="stars" class="btn btn-dark" href="#tab1" data-toggle="tab"><span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+            <div class="hidden-xs">About</div>
+          </button>
+        </div>
 
 
-									<div class="tab-pane fade in" id="tab2">
-					          <h3>Affiliated Artists</h3>
-					          	<ul>
-						          	<% for (let i = 0; i < event.hostArtists.length; i++) { -%>
-						          		<li><a href="/artist/<%=event.hostArtists[i].artist_id%>"><%=event.hostArtists[i].name%></a></li>
-						          	<% } -%>
-					          	</ul>
-					        </div>
+				<div class="btn-group" role="group">
+          <button type="button" id="eventArtists" class="btn btn-light" href="#tab2" data-toggle="tab"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+            <div class="hidden-xs">Artists</div>
+          </button>
+        </div>
 
-					        <div class="tab-pane fade in" id="tab3">
-					          <h3>Users Attending: <%= event.usersAttending.length %></h3>
-					          	<ul> <% for (let i = 0; i < event.usersAttending.length; i++) { -%>
-		                       <li> <a href="/user/<%=event.usersAttending[i].user_id%>"> <%=event.usersAttending[i].username%> </a></li>
-		                         <% } -%>
-		                    </ul>
-										</div>
+				<div class="btn-group" role="group">
+          <button type="button" id="going" class="btn btn-light" href="#tab3" data-toggle="tab"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+            <div class="hidden-xs">Going</div>
+          </button>
+        </div>
 
-					     </div>
-			    	</div>
-			    </div>
+		  </div>
+
+      <div class="well">
+		    <div class="tab-content">
+
+		    	<!-- EVENT INFO -->
+		      <div class="tab-pane fade in active" id="tab1">
+						<h3><%=event.name%> Info</h3>
+						<ul>
+							<%if (event.description) {%>
+								<li><span class="category">Description:</span> <%=event.description %></li>
+							<%}%>
+							<%if (event.venue) {%>
+								<li><span class="category">Venue:</span> <%= event.venue %></li>
+							<%}%>
+							<%if (event.date) {%>
+								<li><span class="category">Date:</span> <%= event.date %></li>
+							<%}%>
+						</ul>
+		      </div>
+
+		      <!-- AFFILIATED ARTISTS -->
+					<div class="tab-pane fade in" id="tab2">
+	          <h3>Affiliated Artists</h3>
+          	<ul>
+	          	<% for (let i = 0; i < event.hostArtists.length; i++) { %>
+	          		<li>
+	          			<a href="/artist/<%=event.hostArtists[i].artist_id%>"><%=event.hostArtists[i].name%></a>
+	          		</li>
+	          	<% } %>
+          	</ul>
+	        </div>
+
+	        <div class="tab-pane fade in" id="tab3">
+	          <h3>Users Attending: <%= event.usersAttending.length %></h3>
+	          <ul> 
+	          	<% for (let i = 0; i < event.usersAttending.length; i++) { %>
+                <li> 
+                	<a href="/user/<%=event.usersAttending[i].user_id%>"><%=event.usersAttending[i].username%></a>
+                </li>
+              <% } %>
+            </ul>
+					</div>
+
 				</div>
+    	</div>
 
-				<div class="container-fluid">
-					<%for (let i = 0; i < bandMembers.length; i++) {%>
-						<%if (bandMembers[i].user_id.toString() === user._id.toString()) {%>
-							<a class="btn btn-dark" id="edit-event" href="/event/<%= event.id %>/edit">Edit <%=event.name%></a>
-								<form action="/event/<%= event.id %>?_method=DELETE" method="POST">
-									<button class="btn btn-danger form-control" type="submit">Delete <%=event.name%></button>
-								</form>
-						<%}%>
+			<div class="container-fluid">
+				<%for (let i = 0; i < bandMembers.length; i++) {%>
+					<%if (bandMembers[i].user_id.toString() === user._id.toString()) {%>
+						<a class="btn btn-dark" id="edit-event" href="/event/<%=event.id %>/edit">Edit <%=event.name%></a>
+						<form action="/event/<%=event.id%>?_method=DELETE" method="POST">
+							<button class="btn btn-danger form-control" type="submit">Delete <%=event.name%></button>
+						</form>
 					<%}%>
-				</div>
+				<%}%>
+			</div>
 
+		</main>
 
-			<footer class="container-fluid">
-				<form action="/logout" method="GET">
-   				<input type="submit" class="btn btn-block form-control" id="logout" value="Logout <%=user.username%>" />
-				</form>
-			</footer>
+		<!-- LOG OUT -->
+		<footer class="container-fluid">
+			<form action="/logout" method="GET">
+ 				<input type="submit" class="btn btn-block form-control" id="logout" value="Logout <%=user.username%>" />
+			</form>
+		</footer>
 
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+	  <script src="/js/app.js"></script>
 
-
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  <script src="/js/app.js"></script>
-
-</body>
+	</body>
 </html>
