--- a/views/user/show.ejs
+++ b/views/user/show.ejs
@@ -114,13 +114,13 @@
 	      <div class="tab-pane fade in" id="tab3">
 	        <h3>Events Attending</h3>
 	      	<ul>
-						<% for (let i = 0; i < user.eventsAttending.length; i++) { -%>
+						<% for (let i = 0; i < user.eventsAttending.length; i++) { %>
 							<li>
 								<a href="/event/<%=user.eventsAttending[i].event_id%>">
-									<%= user.eventsAttending[i].name%>
+									<%= user.eventsAttending[i].name %>
 								</a>
 							</li>
-						<% } -%>
+						<% } %>
 					</ul>
 	      </div>
 
@@ -128,14 +128,18 @@
 				<div class="tab-pane fade in" id="tab4">
 		      <h3>Affiliated Artists</h3>
 		      <ul>
-						<% for (let i = 0; i < user.artists.length; i++) { -%>
+						<% for (let i = 0; i < user.artists.length; i++) { %>
 							<li>
 								<a href="/artist/<%=user.artists[i].artist_id%>">
-									<%= user.artists[i].name%>
+									<%= user.artists[i].name %>
 									</a>
 							</li>
-						<% } -%>
+						<% } %>
 					</ul>
+					<% if (user.artists.length == 0) { %>
+						<a href="/artist/new">Become an Artist</a>
+					<% } %>
+
 		    </div>
 		  </div>
 	  </div>
