fixed add/remove member buttons, updated affiliated artists on user show page

--- a/less/style.less
+++ b/less/style.less
@@ -1,6 +1,6 @@
 @titleFont: 'Shrikhand', cursive;
 @navFont: 'Maven Pro', sans-serif;
-@headerFont:'Permanent Marker', cursive;
+@headerFont: 'Permanent Marker', cursive;
 @linkFont: 'Maven Pro', sans-serif;
 @textFont: 'Maven Pro', sans-serif;
 
@@ -24,6 +24,8 @@ ul {
 }
 
 #home-message {
+	z-index: 1000;
+	margin-bottom: 0;
 	color: white;
 	text-align: center;
 	font-family: 'Permanent Marker', cursive;
@@ -232,7 +234,7 @@ a, #user-carousel, #artist-carousel, #event-carousel {
 	font-family: @textFont;
 	font-size: 1.5em;
 		ul {
-			font-size: 1.5em;
+			font-size: 24px;
 		}
 		a {
 			text-decoration: none;
