--- a/views/user/show.ejs
+++ b/views/user/show.ejs
@@ -137,7 +137,9 @@
 						<% } %>
 					</ul>
 					<% if (user.artists.length == 0) { %>
-						<a href="/artist/new">Become an Artist</a>
+						<ul>
+							<li>No Artists registered. To register, click <a href="/artist/new">here.</a></li>
+						</ul>
 					<% } %>
 
 		    </div>
