--- a/less/style.less
+++ b/less/style.less
@@ -191,6 +191,7 @@ a, #user-carousel, #artist-carousel, #event-carousel {
 
 .card-title {
 	h3 {
+		color: white;
 		font-size: 36px;
 	}
 }
@@ -220,7 +221,7 @@ a, #user-carousel, #artist-carousel, #event-carousel {
 	font-family: @textFont;
 }
 
-#createNewEvent {
+#createNewEvent, #registerNewArtist {
 	border-radius: 5px;
 }
 
