--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,6 +8,12 @@ nav {
 ul {
   list-style: none;
 }
+#carousel .row {
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+  position: absolute;
+  bottom: 0;
+}
 .container-fluid {
   background-color: none !important;
 }
