--- a/views/artist/new.ejs
+++ b/views/artist/new.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>New Artist</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -56,7 +56,7 @@
     						<input type="text" class= "form-control" name="avatar" placeholder="Image Link"><br />
 
     						<label class= "control-label" for="artistDescription">Artist Description:</label><br />
-    						<textarea name="description" rows="8" class="form-control" placeholder="Description"></textarea><br /><br />
+    						<input name="description" class="form-control" placeholder="Description"><br /><br />
 
     						<button id="new-submit" class="btn btn-dark mb-2 btn-block" type="submit">Create Artist</button>
     					</form>
