--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Earshare Users</title>
-		<link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
 		<link href="https://fonts.googleapis.com/css?family=Maven+Pro:500,700|Wire+One" rel="stylesheet">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
