--- a/views/artist/show.ejs
+++ b/views/artist/show.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Artist Profile</title>
-  	<link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
   	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
@@ -153,6 +153,7 @@
 
                   </div>
                 </div>
+                <br/>
               <% } %>
             <% } %>
             
