--- a/views/auth/home.ejs
+++ b/views/auth/home.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Music App Landing Page</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Maven+Pro:500,700|Permanent+Marker|Shrikhand" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
