--- a/views/event/edit.ejs
+++ b/views/event/edit.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Edit Event</title>
-	<link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" type="text/css" href="/css/style.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -47,7 +47,7 @@
 						<input type="text" class="form-control" name="img" placeholder="Event Image" value="<%=event.img%>"><br />
 
 						<label class="control-label" for="updateEventDescription">Update Event Description:</label><br />
-						<textarea name="description" rows="8" class="form-control" placeholder="Description" value="<%=event.description%>"></textarea><br />
+						<input name="description" class="form-control" placeholder="Description" value="<%=event.description%>"><br /><br />
 
 						<button id="edit-event" class="btn btn-dark mb-2 btn-block" type="submit">Submit Changes</button>
 					</form>
