--- a/views/event/new.ejs
+++ b/views/event/new.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>New Event</title>
-	<link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" type="text/css" href="/css/style.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -48,7 +48,7 @@
 						<input type="text" class="form-control" name="img" placeholder="Image Link"><br />
 
 						<label class= "control-label" for="eventDescription">Event Description:</label><br />
-						<textarea name="description" rows="8" class="form-control" placeholder="Description"></textarea><br /><br />
+						<input name="description" class="form-control" placeholder="Description"><br /><br />
 
 						<button id="new-submit" class="btn btn-dark mb-2 btn-block" type="submit">Create Event</button>
 					</form>
