updated color of edit/new form title

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -337,7 +337,7 @@ div.col-md-12 {
   left: 0 !important;
   width: 100% !important;
 }
-.create-new {
+.form-title {
   color: #f4511e;
 }
 .control-label {
