--- a/views/event/edit.ejs
+++ b/views/event/edit.ejs
@@ -30,7 +30,7 @@
 			<div class="container-fluid text-center">
 				<div class="col-lg-12 col-sm-12">
 
-					<h1>Edit <%=event.name%></h1>
+					<h1 class="form-title">Edit <%=event.name%></h1>
 
 					<form class= "form-inline-block" action="/event/<%=event.id%>?_method=PUT" method="POST">
 
