--- a/views/user/edit.ejs
+++ b/views/user/edit.ejs
@@ -31,7 +31,7 @@
 	<main>
 		<div class="container-fluid text-center">
 			<div class="col-lg-12 col-sm-12">
-				<h1>Edit <%=user.username%>'s Information</h1>
+				<h1 class="form-title">Edit <%=user.username%>'s Information</h1>
 
 				<form class="form-inline-block" action="/user/<%=index%>?_method=PUT" method="POST">
 
