--- a/less/style.less
+++ b/less/style.less
@@ -352,8 +352,8 @@ div.col-md-12 {
 	width: 100% !important;
 }
 
-// NEW VIEW
-.create-new {
+// NEW + EDIT VIEW
+.form-title {
 	color: #f4511e;
 }
 .control-label {
