--- a/views/artist/edit.ejs
+++ b/views/artist/edit.ejs
@@ -29,7 +29,7 @@
 
         <div class="container-fluid text-center">
           <div class="col-lg-12 col-sm-12">
-            <h1> Edit <%=artist.name%>'s Information</h1>
+            <h1 class="form-title"> Edit <%=artist.name%>'s Information</h1>
 
             <form action="/artist/<%=artist.id%>?_method=PUT" method="POST"><br />
 
