--- a/views/artist/new.ejs
+++ b/views/artist/new.ejs
@@ -32,7 +32,7 @@
           <div class="container-fluid text-center">
     				<div class="col-lg-12 col-sm-12">
 
-              <h1 class="create-new">Create New Artist for <%=currentUser.username%></h1>
+              <h1 class="form-title" class="create-new">Create New Artist for <%=currentUser.username%></h1>
 
                 <form action="/artist" method="POST"><br />
 
