--- a/views/event/new.ejs
+++ b/views/event/new.ejs
@@ -29,7 +29,7 @@
 				<div class="col-lg-12 col-sm-12">
 					
 					<form class= "form-inline-block" action="/event" method="POST">
-						<h1> Create Event for <%=currentArtist.name%></h1>
+						<h1 class="form-title"> Create Event for <%=currentArtist.name%></h1>
 
 							<select class="invisible" name="artistId">
 		            <option value="<%=currentArtist._id%>"><%= currentArtist.name %></option>
