fixed landing page display

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,6 +13,14 @@ ul {
   margin-right: 0 !important;
   position: absolute;
   bottom: 0;
+  max-height: 50vh !important;
+  width: 100%;
+}
+#carousel-example-generic {
+  max-height: 50vh !important;
+}
+#carousel-example-generic * {
+  max-height: 50vh !important;
 }
 .container-fluid {
   background-color: none !important;
@@ -110,8 +118,10 @@ a:hover,
 #artistCarouselPic,
 #eventCarouselPic,
 #userCarouselPic {
-  max-width: 50%;
-  max-height: 50%;
+  width: 50%;
+  height: 50%;
+  max-width: 230px;
+  max-height: 230px;
   border-radius: 100%;
 }
 .carousel-caption {
@@ -257,16 +267,16 @@ a:hover,
 #index-jumbo h1 {
   font-family: 'Shrikhand', cursive;
   color: #e66043;
-  text-shadow: 0.5vw 0.5vw 0vw #62717b, 0.7vw 0.7vw #889DAB;
+  text-shadow: 3px 3px 0 #62717b, 4px 4px #889DAB;
   letter-spacing: 0.7vw;
-  font-size: 15vw;
+  font-size: 110px;
   margin: 0;
 }
 #homepage-jumbo h3,
 #index-jumbo h3 {
   margin: 0;
   font-family: 'Permanent Marker', cursive;
-  font-size: 4.5vw;
+  font-size: 30px;
   color: #e2f1f8;
 }
 #homepage-jumbo p,
@@ -437,5 +447,15 @@ div.col-md-12 {
   #userCarouselPic {
     max-width: 30%;
     max-height: 30%;
+  }
+}
+@media (min-width: 830px) {
+  #index-jumbo h1,
+  #homepage-jumbo h1 {
+    font-size: 130px;
+  }
+  #index-jumbo h3,
+  #homepage-jumbo h3 {
+    font-size: 40px;
   }
 }
