--- a/less/style.less
+++ b/less/style.less
@@ -21,6 +21,14 @@ ul {
 	margin-right: 0 !important;
 	position: absolute;
 	bottom: 0;
+	max-height: 50vh !important;
+	width: 100%;
+}
+#carousel-example-generic {
+	max-height: 50vh !important;
+	* {
+		max-height: 50vh !important;
+	}
 }
 .container-fluid {
 	background-color: none !important;
@@ -117,8 +125,10 @@ a, #user-carousel, #artist-carousel, #event-carousel {
 }
 
 #artistCarouselPic, #eventCarouselPic, #userCarouselPic {
-	max-width: 50%;
-	max-height: 50%;
+	width: 50%;
+	height: 50%;
+	max-width: 230px;
+	max-height: 230px;
 	border-radius: 100%;
 }
 .carousel-caption {
@@ -267,15 +277,15 @@ a, #user-carousel, #artist-carousel, #event-carousel {
 		h1 {
 			font-family: @titleFont;
 			color: rgba(230, 96, 67, 1);
-			text-shadow: 0.5vw 0.5vw 0vw #62717b, 0.7vw 0.7vw #889DAB;
+			text-shadow: 3px 3px 0 #62717b, 4px 4px #889DAB;
 			letter-spacing: 0.7vw;
-			font-size: 15vw;
+			font-size: 110px;
 			margin: 0;
 		}
 		h3 {
 			margin: 0;
 			font-family: @headerFont;
-			font-size: 4.5vw;
+			font-size: 30px;
 			color: #e2f1f8;
 		}
 
@@ -448,4 +458,13 @@ div.col-md-12 {
 		max-width: 30%;
 		max-height: 30%;
 	}
+}
+@media (min-width: 830px) {
+	#index-jumbo h1, #homepage-jumbo h1 {
+		font-size: 130px;
+	}
+	#index-jumbo h3, #homepage-jumbo h3 {
+		font-size: 40px;
+	}
+
 }
