updated responsive design on landing page

--- a/less/style.less
+++ b/less/style.less
@@ -15,7 +15,14 @@ nav {
 ul {
 	list-style: none;
 }
-
+#carousel-example-generic {
+	margin: 0 auto;
+}
+#center-content {
+	min-height: 100%;
+	display: flex;
+	align-items: center;
+}
 #carousel .row {
 	margin-left: 0 !important;
 	margin-right: 0 !important;
@@ -23,6 +30,9 @@ ul {
 	bottom: 0;
 	max-height: 50vh !important;
 	width: 100%;
+	* {
+		vertical-align: middle;
+	}
 }
 #carousel-example-generic {
 	max-height: 50vh !important;
@@ -103,7 +113,7 @@ a, #user-carousel, #artist-carousel, #event-carousel {
 	}
 }
 
-.indexLink{
+.indexLink {
 	font-family: @linkFont;
 	color: white;
 	font-size: 30px;
@@ -140,6 +150,10 @@ a, #user-carousel, #artist-carousel, #event-carousel {
 	overflow: hidden;
 	white-space: nowrap;
 	text-overflow: ellipsis;
+}
+.carousel .item img {
+	max-width: 1200px;
+	margin: 0 auto;
 }
 
 #artistListPic, #eventListPic, #userListPic {
@@ -417,7 +431,41 @@ div.col-md-12 {
 	  padding-right: 2.5px;
 	}
 }
+@media (min-width: 768px) {
+	#jumbotron {
+		padding-top: 30px;
+		padding-bottom: 30px;
+	}
+	#artistCarouselPic, #eventCarouselPic, #userCarouselPic {
+		width: 50%;
+		height: 50%;
+		max-width: 230px;
+		max-height: 230px;
+		border-radius: 100%;
+	}
 
+	.carousel-caption {
+		right: 15%;
+		left: 15%;
+	}
+	.carousel-control .glyphicon-chevron-left,
+  .carousel-control .glyphicon-chevron-right,
+  .carousel-control .icon-prev,
+  .carousel-control .icon-next {
+    width: 20px;
+    height: 20px;
+    margin-top: -10px;
+    font-size: 30px;
+  }
+  .carousel-control .glyphicon-chevron-left,
+  .carousel-control .icon-prev {
+    margin-left: -10px;
+  }
+  .carousel-control .glyphicon-chevron-right,
+  .carousel-control .icon-next {
+    margin-right: -10px;
+  }
+}
 @media (max-width: 475px) {
 	a.nav-item.nav-link, div.dropdown-menu.show, div.dropdown-menu {
 		font-size: 15px;
@@ -448,10 +496,6 @@ div.col-md-12 {
 	.carousel h3 {
 		font-size: 16px;
 	}
-	#artistCarouselPic, #eventCarouselPic, #userCarouselPic {
-		max-width: 40%;
-		max-height: 40%;
-	}
 }
 @media (max-width: 350px) {
 	#artistCarouselPic, #eventCarouselPic, #userCarouselPic {
@@ -467,4 +511,38 @@ div.col-md-12 {
 		font-size: 40px;
 	}
 
+}
+@media (max-width: 630px) {
+	#index-jumbo h1, #homepage-jumbo h1 {
+		font-size: 90px;
+	}
+	#index-jumbo h3, #homepage-jumbo h3 {
+		font-size: 25px;
+	}
+}
+@media (max-width: 510px) {
+	#index-jumbo h1, #homepage-jumbo h1 {
+		font-size: 70px;
+	}
+	#index-jumbo h3, #homepage-jumbo h3 {
+		font-size: 20px;
+	}
+}
+@media (max-width: 400px) {
+	#index-jumbo h1, #homepage-jumbo h1 {
+		font-size: 55px;
+	}
+	#index-jumbo h3, #homepage-jumbo h3 {
+		font-size: 15px;
+	}
+}
+@media (max-width: 320px) {
+	#index-jumbo h1, #homepage-jumbo h1 {
+		font-size: 40px;
+	}
+}
+@media (min-width: 650px) {
+	#carousel .row {
+
+	}
 }
